# LynxMaker

./: .gitignore  .gitmodules  CMakeLists.txt  LynxMaker.json  README.md
app/LynxMaker/: CMakeLists.txt  resources.qrc
app/LynxMaker/.cmake/: cmakeUtils.cmake  getGitRevisionDescription.cmake  version.h.in  version_exe.rc.in
app/LynxMaker/include/: LynxConfigure.h  application.h  settings.h
app/LynxMaker/include/component/: circularReveal.h  fpsItem.h
app/LynxMaker/include/configuration/: MambaConfiguration.h
app/LynxMaker/include/system/: app_dmp.h
app/LynxMaker/include/system/infos/: appInfo.h  machineInfo.h
app/LynxMaker/include/ui/: xConfigureController.h  xDiscover.h
app/LynxMaker/qml/: app.qml
app/LynxMaker/qml/common/: X_Button.qml
app/LynxMaker/qml/global/: GlobalModel.qml  ItemsOriginal.qml  qmldir
app/LynxMaker/qml/pages/: P_Home.qml
app/LynxMaker/qml/window/: CrashWindow.qml  MainWindow.qml
app/LynxMaker/res/translations/: LynxMaker_en_US.ts  LynxMaker_fr_FR.ts  LynxMaker_zh_CN.ts
app/LynxMaker/src/: LynxConfigure.cpp  application.cpp  main.cpp  settings.cpp
app/LynxMaker/src/component/: circularReveal.cpp  fpsItem.cpp
app/LynxMaker/src/configuration/: MambaConfiguration.cpp
app/LynxMaker/src/system/infos/: appInfo.cpp  machineInfo.cpp
app/LynxMaker/src/ui/: xConfigureController.cpp  xDiscover.cpp
